--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "url": "https://github.com/TheLordBaski/node-smb2"
   },
   "dependencies": {
-    "ntlm": "~0.1.1"
+    "ntlm": "~0.1.1",
+    "win32filetime" : "^1.0.2"
   },
   "keywords": [
     "SMB",
