fixed package.json versions

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "samba2",
   "description": "Samba2 Client for nodejs version 4.4",
   "homepage": "https://github.com/marsaud/node-smb2",
-  "version": "0.8.0",
+  "version": "0.8.1",
   "engines": [
     "node"
   ],
@@ -11,7 +11,7 @@
     "url": "https://github.com/thelordbaski"
   },
   "contributors": [
-     "Jakub Gabčo (https://github.com/thelordbaski)"
+     "Jakub Gabčo (https://github.com/thelordbaski)",
     "Fabrice Marsaud <fabrice.marsaud@vates.fr> (https://github.com/marsaud)"
   ],
   "main": "lib/smb2.js",
